Add initial project structure, configuration, and documentation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,53 +1,54 @@
 # See https://pre-commit.com for more information
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-json
-    -   id: check-added-large-files
-        args: ['--maxkb=500']
-    -   id: check-merge-conflict
-    -   id: detect-private-key
-    -   id: debug-statements
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-json
+      - id: check-added-large-files
+        args: ["--maxkb=500"]
+      - id: check-merge-conflict
+      - id: detect-private-key
+      - id: debug-statements
 
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
-    -   id: black
-        args: [--line-length=127]
+      - id: black
+        args: ["--line-length=127"]
 
--   repo: https://github.com/pycqa/isort
+  - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
-    -   id: isort
+      - id: isort
         args: ["--profile", "black", "--filter-files"]
 
--   repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.1.0
     hooks:
-    -   id: flake8
-        args: [
-            "--max-line-length=127",
-            "--extend-ignore=E203",
-            "--docstring-convention=google"
-        ]
+      - id: flake8
+        additional_dependencies:
+          - flake8-docstrings
+          - pydocstyle
+        args:
+          - --max-line-length=127
+          - --docstring-convention=google
 
--   repo: https://github.com/pycqa/bandit
+  - repo: https://github.com/pycqa/bandit
     rev: 1.7.5
     hooks:
-    -   id: bandit
+      - id: bandit
         args: ["-c", "pyproject.toml"]
         additional_dependencies: ["bandit[toml]"]
 
 ci:
-    autofix_commit_msg: |
-        [pre-commit.ci] auto fixes from pre-commit.com hooks
+  autofix_commit_msg: |
+    [pre-commit.ci] auto fixes from pre-commit.com hooks
 
-        for more information, see https://pre-commit.ci
-    autofix_prs: true
-    autoupdate_schedule: weekly
-    skip: []
-    submodules: false
+    for more information, see https://pre-commit.ci
+  autofix_prs: true
+  autoupdate_schedule: weekly
+  skip: []
+  submodules: false
